--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           </form>
         </div>
       </div>
+
       <div class="row">
         <div class="col-md-12">
           <h2 ng-show="restaurants.length && filtered.length">Restaurants List</h2>
@@ -26,16 +27,17 @@
           <ul>
             <li ng-repeat="item in filtered = (restaurants | filter:query)">
               <span ng-mouseover="showInfo = true" ng-hide="showInfo">
-                {{item.name}} <a ng-click="deleteRestaurant(item)">Delete</a>
+                {{item.name}} <button ng-click="deleteRestaurant(item)" class="btn btn-danger btn-xs">Delete</button>
               </span>
+
                 <div ng-show="showInfo" ng-mouseleave="showInfo = false">
-                  {{item.name}}
+                  {{item.name}} <button ng-click="deleteRestaurant(item)" class="btn btn-danger btn-xs">Delete</button>
                   <ul>
                     <li>{{item.type}}</li>
                     <li>{{item.location}}</li>
                     <li>{{item.priceRange}}</li>
                   </ul>
-                  <button ng-click="editing = true"  ng-hide="editing" class="btn btn-default">Edit</button>
+                  <button ng-click="editing = true"  ng-hide="editing" class="btn btn-warning btn-xs">Edit</button>
                 </div>
               <span class="form-group" ng-show="editing" ng-submit="editing = false">
                 <form class="form-inline" role="form">
@@ -53,13 +55,11 @@
         <div class="col-md-4">
           <h2>New Restaurant</h2>
           <form ng-submit="addRestaurant()" class="form" role="form">
-            <div class="form-group">
               <input type="text" ng-model="restaurantName" class="form-control" placeholder="Enter name">
               <input type="text" ng-model="restaurantType" class="form-control" placeholder="Enter type">
               <input type="text" ng-model="restaurantLocation" class="form-control" placeholder="Enter location">
               <input type="text" ng-model="restaurantPriceRange" class="form-control" placeholder="Enter price range">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
 
